<resources>
    <string name="app_name">Ledger</string>
    <string name="date_label">Date</string>
    <string name="amount_label">Amount</string>
    <string name="category_label">Category</string>
    <string name="transactee_label">Transactee</string>
    <string name="save_button_label">Save</string>
    <string name="tags">Tags</string>
    <string name="category_error">Category needs to be set</string>
    <string name="amount_error">Invalid format</string>
    <string name="note">Note</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="export_to_file">Export to file</string>
    <string name="import_from_files">Import from file</string>
    <string name="balance">Balance</string>
    <string name="add_new_transaction">Add new transaction</string>
    <string name="statistics">Statistics</string>
    <string name="preferences">Preferences</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="user_server">Use Server</string>
    <string name="server_url">Server URL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="error_username_blank">Username cannot be blank</string>
    <string name="error_password_blank">Password cannot be blank</string>
    <string name="error_server_url_format_invalid">Server URL is invalid</string>
    <string name="error_authentication_failed">Authenticated Failed</string>
    <string name="error_unable_to_connect">Unable to connect to the server</string>
    <string name="go_to_account">Go to account settings</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="error_passwords_not_matching">Passwords do not match</string>
    <string name="error_user_already_exists">User already exists</string>
    <string name="error_unkown">Unknown error</string>
    <string name="error_signup_disabled">Signup disabled for this server</string>
    <string name="set_filter">Filter</string>
    <string name="remove">Remove</string>
    <string name="from_date">From Date</string>
    <string name="until_date">Until Date</string>
</resources>
