<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/transactionList">

    <fragment
        android:id="@+id/transactionList"
        android:name="com.holahmeds.ledger.fragments.TransactionList"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_transaction_list">
        <action
            android:id="@+id/action_edit_from_list"
            app:destination="@id/transactionEditor"
            app:popUpTo="@+id/transactionList">
            <argument
                android:name="title"
                android:defaultValue="Edit transaction" />
        </action>
        <action
            android:id="@+id/action_show_chart"
            app:destination="@id/chartFragment"
            app:popUpTo="@+id/transactionList" />
        <action
            android:id="@+id/action_show_preferencesFragment"
            app:destination="@id/preferencesFragment" />
    </fragment>
    <fragment
        android:id="@+id/transactionEditor"
        android:name="com.holahmeds.ledger.fragments.TransactionEditor"
        android:label="{title}"
        tools:layout="@layout/fragment_transaction_editor">
        <argument
            android:name="transactionID"
            android:defaultValue="0L" />
        <argument
            android:name="title"
            android:defaultValue="New transaction"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/chartFragment"
        android:name="com.holahmeds.ledger.fragments.ChartFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_chart" />
    <fragment
        android:id="@+id/preferencesFragment"
        android:name="com.holahmeds.ledger.fragments.PreferencesFragment"
        android:label="Preferences" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.holahmeds.ledger.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.holahmeds.ledger.fragments.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>