<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filter_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/from_date"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:nextFocusForward="@id/filter_until"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filter_until"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/until_date"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:nextFocusForward="@id/filter_category"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:layout_marginEnd="24dp">

        <AutoCompleteTextView
            android:id="@+id/filter_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_label"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:nextFocusForward="@id/filter_transactee"
            android:padding="12dp"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:layout_marginEnd="24dp">

        <AutoCompleteTextView
            android:id="@+id/filter_transactee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transactee_label"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:padding="12dp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>